# mcp

./: README.md
documentation-mcp-server/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml  requirements.txt
documentation-mcp-server/solargis/documentation_mcp_server/: models.py  server.py  server_utils.py  utils.py
